# chrono-Log

./: .gitignore  CONTRIBUTING.MD  GEMINI.md  PROPOSED_CHANGES.md  README.md  ROADMAP.md
.cargo/: config.toml
chronolog/: package-lock.json  package.json
chronolog/src/: index.html  main.js
chronolog/src-tauri/: Cargo.toml  tauri.conf.json
chronolog/src-tauri/src/: lib.rs  main.rs
docs/: index.html
docs/css/: styles.css
mnema/: package-lock.json  package.json
mnema/src/: index.html  main.js
mnema/src-tauri/: Cargo.toml  tauri.conf.json
mnema/src-tauri/.cargo/: config.toml
mnema/src-tauri/src/: lib.rs  main.rs
